# clpt

./: CMakeLists.txt  README.md
.github/workflows/: clang-format-check.yml  cmake-linux-clang.yml  cmake-linux-gcc.yml  cmake-macos-clang.yml  cmake-macos-gcc.yml
clpt/: CMakeLists.txt
clpt/include/: camera.hpp  cl_struct.h  clpt.hpp  glfwcpp.hpp  render.hpp  tinymt.clh  tinymt64.clh  tinymt64def.h  transform.hpp  utils.hpp
clpt/src/: camera.cpp  clpt.cpp  glfwcpp.cpp  kernel.cl  render.cpp  transform.cpp
glpt/: CMakeLists.txt
glpt/include/: glpt.hpp  render.hpp
glpt/src/: glpt.cpp  render.cpp
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_clpt.cpp  test_glpt.cpp
